--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         }
 
         #logo {
-            width: 180px;  /* Logo aumentada em 20% */
+            width: 300px;  /* Logo aumentada em 20% */
             margin-top: 20px;
         }
 
@@ -68,6 +68,7 @@
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            text-align: left; /* Alinha o texto à esquerda dentro do bloco */
         }
     </style>
 </head>
