--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         }
 
         #resultado {
-            background-color: #f1f1f1; /* Fundo cinza para o texto retornado */
+            background-color: #ffffff; /* Mudando para branco */
             padding: 20px;
             border-radius: 5px;
             margin-top: 20px;
